@@ -56,13 +56,16 @@ import org.apache.druid.msq.util.MultiStageQueryContext;
 import org.apache.druid.query.DruidMetrics;
 import org.apache.druid.query.QueryContext;
 import org.apache.druid.query.aggregation.AggregatorFactory;
+import org.apache.druid.query.expression.TestExprMacroTable;
 import org.apache.druid.query.filter.NotDimFilter;
 import org.apache.druid.query.filter.NullFilter;
 import org.apache.druid.query.filter.RangeFilter;
 import org.apache.druid.segment.IndexSpec;
+import org.apache.druid.segment.VirtualColumns;
 import org.apache.druid.segment.column.ColumnType;
 import org.apache.druid.segment.column.RowSignature;
 import org.apache.druid.segment.transform.CompactionTransformSpec;
+import org.apache.druid.segment.virtual.ExpressionVirtualColumn;
 import org.apache.druid.sql.calcite.util.CalciteTests;
 import org.apache.druid.timeline.CompactionState;
 import org.apache.druid.timeline.DataSegment;
@@ -111,7 +114,7 @@ public class MSQReplaceTest extends MSQTestBase
         {PARALLEL_MERGE, PARALLEL_MERGE_MSQ_CONTEXT},
         {SUPERUSER, SUPERUSER_MSQ_CONTEXT},
         {WITH_REPLACE_LOCK_AND_COMPACTION_STATE, QUERY_CONTEXT_WITH_REPLACE_LOCK_AND_COMPACTION_STATE}
-        };
+    };
     return Arrays.asList(data);
   }
 
@@ -328,7 +331,7 @@ public class MSQReplaceTest extends MSQTestBase
                              SegmentId.of("foo", Intervals.ETERNITY, "test", 0)
                          )
                      )
-                     .setExpectedShardSpec(NumberedShardSpec.class)
+                     .setExpectedShardSpec(DimensionRangeShardSpec.class)
                      .setExpectedResultRows(
                          ImmutableList.of(
                              new Object[]{946684800000L, "", 1.0f},
@@ -347,7 +350,7 @@ public class MSQReplaceTest extends MSQTestBase
                      .setExpectedLastCompactionState(
                          expectedCompactionState(
                              context,
-                             Collections.emptyList(),
+                             List.of("v0"),
                              DimensionsSpec.builder()
                                            .setDimensions(
                                                ImmutableList.of(
@@ -357,13 +360,24 @@ public class MSQReplaceTest extends MSQTestBase
                                            )
                                            .setDimensionExclusions(Collections.singletonList("__time"))
                                            .build(),
+                             new CompactionTransformSpec(
+                                 null,
+                                 VirtualColumns.create(
+                                     new ExpressionVirtualColumn(
+                                         "v0",
+                                         "lower(\"dim1\")",
+                                         ColumnType.STRING,
+                                         TestExprMacroTable.INSTANCE
+                                     )
+                                 )
+                             ),
                              GranularityType.ALL,
                              Intervals.ETERNITY
                          )
                      )
                      .verifyResults();
   }
-
+  
   @MethodSource("data")
   @ParameterizedTest(name = "{index}:with context {0}")
   public void testReplaceOnFooWithAllClusteredByExpression(String contextName, Map<String, Object> context)
@@ -1018,7 +1032,8 @@ public class MSQReplaceTest extends MSQTestBase
                              GranularityType.HOUR,
                              Intervals.of("2016-06-27T01:00:00.000Z/2016-06-27T02:00:00.000Z"),
                              new CompactionTransformSpec(
-                                 new RangeFilter("v0", ColumnType.LONG, 1466989200000L, 1466992800000L, false, true, null)
+                                 new RangeFilter("v0", ColumnType.LONG, 1466989200000L, 1466992800000L, false, true, null),
+                                 null
                              )
                          )
                      )
@@ -1735,7 +1750,7 @@ public class MSQReplaceTest extends MSQTestBase
                              ),
                              GranularityType.DAY,
                              Intervals.ETERNITY,
-                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                          )
                      )
                      .verifyResults();
@@ -2206,7 +2221,7 @@ public class MSQReplaceTest extends MSQTestBase
                          ),
                          GranularityType.QUARTER,
                          Intervals.of("2000-01-01T00:00:00.000Z/2002-01-01T00:00:00.000Z"),
-                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2287,7 +2302,7 @@ public class MSQReplaceTest extends MSQTestBase
                          ),
                          GranularityType.DAY,
                          Intervals.ETERNITY,
-                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2334,7 +2349,7 @@ public class MSQReplaceTest extends MSQTestBase
                          ),
                          GranularityType.HOUR,
                          Intervals.of("2016-06-27T01:00:00/2016-06-27T02:00:00"),
-                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2383,7 +2398,7 @@ public class MSQReplaceTest extends MSQTestBase
                          ),
                          GranularityType.DAY,
                          Intervals.of("2016-06-29T00:00:00.000Z/2016-07-03T00:00:00.000Z"),
-                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2432,7 +2447,7 @@ public class MSQReplaceTest extends MSQTestBase
                          ),
                          GranularityType.DAY,
                          Intervals.of("2016-05-25T00:00:00.000Z/2016-06-03T00:00:00.000Z"),
-                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2481,7 +2496,7 @@ public class MSQReplaceTest extends MSQTestBase
                          ),
                          GranularityType.DAY,
                          Intervals.ETERNITY,
-                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2528,7 +2543,7 @@ public class MSQReplaceTest extends MSQTestBase
                          ),
                          GranularityType.ALL,
                          Intervals.ETERNITY,
-                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2575,7 +2590,7 @@ public class MSQReplaceTest extends MSQTestBase
                          ),
                          GranularityType.ALL,
                          Intervals.ETERNITY,
-                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2615,7 +2630,7 @@ public class MSQReplaceTest extends MSQTestBase
                          List.of(new StringDimensionSchema("dim1"), new LongDimensionSchema("cnt")),
                          GranularityType.ALL,
                          Intervals.ETERNITY,
-                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2686,7 +2701,7 @@ public class MSQReplaceTest extends MSQTestBase
                          ),
                          GranularityType.DAY,
                          Intervals.of("2016-06-01T00:00:00.000Z/2016-06-03T00:00:00.000Z"),
-                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2816,10 +2831,30 @@ public class MSQReplaceTest extends MSQTestBase
     return expectedCompactionState(
         context,
         partitionDimensions,
+        dimensions,
+        null,
+        segmentGranularity,
+        interval
+    );
+  }
+
+  private CompactionState expectedCompactionState(
+      Map<String, Object> context,
+      List<String> partitionDimensions,
+      List<DimensionSchema> dimensions,
+      CompactionTransformSpec transformSpec,
+      GranularityType segmentGranularity,
+      Interval interval
+  )
+  {
+    return expectedCompactionState(
+        context,
+        partitionDimensions,
         DimensionsSpec.builder()
                       .setDimensions(dimensions)
                       .setDimensionExclusions(Collections.singletonList("__time"))
                       .build(),
+        transformSpec,
         segmentGranularity,
         interval
     );
@@ -2829,6 +2864,25 @@ public class MSQReplaceTest extends MSQTestBase
       Map<String, Object> context,
       List<String> partitionDimensions,
       DimensionsSpec dimensionsSpec,
+      GranularityType segmentGranularity,
+      Interval interval
+  )
+  {
+    return expectedCompactionState(
+        context,
+        partitionDimensions,
+        dimensionsSpec,
+        null,
+        segmentGranularity,
+        interval
+    );
+  }
+
+  private CompactionState expectedCompactionState(
+      Map<String, Object> context,
+      List<String> partitionDimensions,
+      DimensionsSpec dimensionsSpec,
+      CompactionTransformSpec transformSpec,
       GranularityType segmentGranularity,
       Interval interval
   )
@@ -2865,7 +2919,7 @@ public class MSQReplaceTest extends MSQTestBase
         partitionsSpec,
         dimensionsSpec,
         metricsSpec,
-        null,
+        transformSpec,
         indexSpec,
         granularitySpec,
         null
